<resources>
    <string name="app_name">생알</string>
    <string name="app_channelId">com.jisoo.identityvalarmapp</string>
    <string name="app_channelName">백그라운드 서비스(알림을 끄는 경우 알람이 울리지 않아요!)</string>
    <string name="identityv_Name">com.netease.idv.googleplay</string>
    <string name="identityv_MarketName">market://details?id=</string>
    <string name="january_txt">1월</string>
    <string name="february_txt">2월</string>
    <string name="march_txt">3월</string>
    <string name="april_txt">4월</string>
    <string name="may_txt">5월</string>
    <string name="june_txt">6월</string>
    <string name="july_txt">7월</string>
    <string name="august_txt">8월</string>
    <string name="september_txt">9월</string>
    <string name="october_txt">10월</string>
    <string name="november_txt">11월</string>
    <string name="december_txt">12월</string>
    <string name="Enchantress_txt">주술사</string>
    <string name="Lawyer_txt">변호사</string>
    <string name="MindsEye_txt">맹인</string>
    <string name="Priestess_txt">샤먼</string>
    <string name="GraveKeeper_txt">묘지기</string>
    <string name="Barmaid_txt">바텐더</string>
    <string name="Explorer_txt">모험가</string>
    <string name="Doctor_txt">의사</string>
    <string name="Prospector_txt">탐사원</string>
    <string name="Coordinator_txt">공군</string>
    <string name="Wildling_txt">야만인</string>
    <string name="Thief_txt">도둑</string>
    <string name="Embalmer_txt">납관사</string>
    <string name="Forward_txt">포워드</string>
    <string name="Acrobat_txt">곡예사</string>
    <string name="FemaleDancer_txt">무희</string>
    <string name="Magician_txt">마술사</string>
    <string name="Prisoner_txt">\'죄수\'</string>
    <string name="Mercenary_txt">용병</string>
    <string name="Perfumer_txt">조향사</string>
    <string name="Mechanic_txt">기계공</string>
    <string name="FirstOfficer_txt">항해사</string>
    <string name="Seer_txt">선지자</string>
    <string name="LuckyGuy_txt">행운아</string>
    <string name="Gardener_txt">정원사</string>
    <string name="Entomologist_txt">곤충학자</string>
    <string name="Postman_txt">우편배달부</string>
    <string name="Cowboy_txt">카우보이</string>
    <string name="WeepingClown_txt">우는 광대</string>
    <string name="Painter_txt">화가</string>
    <string name="Batter_txt">타자</string>
    <string name="ToyMerchant_txt">장난감 상인</string>
    <string name="Psychologist_txt">심리학자</string>
    <string name="Patient_txt">환자</string>
    <string name="SoulWeaver_txt">거미</string>
    <string name="Feaster_txt">하스터</string>
    <string name="Geisha_txt">붉은 나비</string>
    <string name="Photographer_txt">사진사</string>
    <string name="AxeBoy_txt">울보</string>
    <string name="Gamekeeper_txt">사냥터지기</string>
    <string name="WuChang_txt">우산의영혼</string>
    <string name="SmileyFace_txt">광대</string>
    <string name="Ripper_txt">리퍼</string>
    <string name="Guard26_txt">수위 26호</string>
    <string name="Disciple_txt">\'사도\'</string>
    <string name="DreamWitch_txt">꿈의 마녀</string>
    <string name="Violinist_txt">바이올리니스트</string>
    <string name="BloodyQueen_txt">블러디 퀸</string>
    <string name="EvilReptilian_txt">재앙의 도마뱀</string>
    <string name="Sculptor_txt">조각가</string>
    <string name="MadEyes_txt">광기의 눈</string>
    <string name="HellEmber_txt">공장장</string>
    <string name="fragment_survivor_mode1_txt">모드1</string>
    <string name="fragment_servivor_mode2_txt">모드2</string>
    <string name="common_close">닫기</string>
    <string name="common_confirm">확인</string>
    <string name="service_noti_title_txt">오늘은 \'%s\'의 생일이에요!</string>
    <string name="service_noti_subtitle_txt">게임에 접속해 %s의 생일을 축하해주세요 :)</string>
    <string name="main_activity_first_tab">생일</string>
    <string name="main_activity_second_tab">설정</string>
    <string name="main_activity_finish_txt">\'뒤로\'버튼을 한 번 더 누르시면 앱이 종료됩니다.</string>
    <string name="fragment_birth_viewtwo_birth_alarm_ring_txt">다음 알람 캐릭터</string>
    <string name="fragment_birth_viewtwo_birth_not_yet_txt">생일이 지나지 않은 캐릭터</string>
    <string name="fragment_birth_viewtwo_birth_passed_txt">생일이 지난 캐릭터</string>
    <string name="fragment_setting_alarm_title_txt">알람</string>
    <string name="fragment_setting_alarm_onoff_txt">알람ON/OFF</string>
    <string name="fragment_setting_alarm_on_txt">(ON)</string>
    <string name="fragment_setting_alarm_off_txt">(OFF)</string>
    <string name="fragment_setting_alarm_time_edit_txt">알람 시간 변경</string>
    <string name="fragment_setting_alarm_sound_txt" translatable="false">알람 볼륨 변경</string>
    <string name="fragment_setting_app_info_txt">앱 정보</string>
    <string name="fragment_setting_verion_info_txt">버전 정보</string>
    <string name="fragment_setting_open_source_txt">오픈 소스 라이선스</string>
    <string name="fragment_setting_etc_txt">기타</string>
    <string name="fragment_setting_language_change_txt">언어 변경</string>
    <string name="fragment_setting_review_txt">리뷰 남기기</string>
    <string name="fragment_setting_feedback_mail_txt">피드백 메일 보내기</string>
    <string name="fragment_setting_email_add_txt">dkadnsk00@gmail.com</string>
    <string name="fragment_setting_email_feedback_info_txt">[생알] 피드백 메일</string>
    <string name="dialog_alarm_title_txt">알람 시간 변경</string>
    <string name="dialog_alarm_edit_info_txt">알람 시간을 선택한 후 확인버튼을 누르면 \n알람 울리는 시간이 변경돼요 :)</string>
    <string name="dialog_alarm_volume_title_txt" translatable="false">알람 볼륨 변경</string>
    <string name="dialog_onoff_title_txt">알람 시간 변경</string>
    <string name="dialog_onoff_info_txt">알람이 켜진 상태에서만 시간을 변경할 수 있어요.\n알람을 켠 후 변경해주세요 :)</string>
    <string name="dialog_need_update_title_txt">업데이트 안내</string>
    <string name="dialog_need_update_info_txt">최신버전으로의 업데이트가 필요해요.\n보다 나은 서비스를 위해 앱을 업데이트 해주세요 :)</string>
    <string name="dialog_need_update_go_update_txt">업데이트 하기</string>
    <string name="dialog_license_coroutine_txt">coroutine</string>
    <string name="dialog_license_coroutine_link">https://www.apache.org/licenses/LICENSE-2.0</string>
    <string name="dialog_license_room_txt">room</string>
    <string name="dialog_license_room_link">https://www.apache.org/licenses/LICENSE-2.0</string>
    <string name="dialog_license_firebase_txt">firebase</string>
    <string name="dialog_license_firebase_link">https://github.com/firebase/firebase-android-sdk/blob/master/LICENSE</string>
    <string name="dialog_license_circleimageview_txt">circle imageview</string>
    <string name="dialog_license_circleimageview_link">https://github.com/hdodenhof/CircleImageView/commit/4f0b4265074bd1ab51af4fc95ef18a5c6cf964f1</string>
    <string name="dialog_license_glide_txt">glide</string>
    <string name="dialog_license_glide_link">https://github.com/bumptech/glide/blob/master/LICENSE</string>
    <string name="dialog_license_chinesecalendar_txt">chinese calendar</string>
    <string name="dialog_license_chinesecalendar_link">https://github.com/unicode-org/icu/blob/main/icu4c/LICENSE</string>
    <string name="dialog_license_hilt_txt">hilt</string>
    <string name="dialog_license_hilt_link">https://github.com/googlecodelabs/android-hilt/blob/main/LICENSE</string>
    <string name="dialog_language_korean_txt">한국어</string>
    <string name="dialog_language_english_txt">영어</string>
    <string name="dialog_language_japanese_txt">일본어</string>
    <string name="toast_language_same_txt">현재 언어와 일치해요.\n변경 후 \'확인\'버튼을 눌러주세요.</string>
</resources>