<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewmodel"
            type="com.jisoo.identityvalarmapp.main.MainViewModel" />

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/ver_0.5_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

        <TextView
            android:id="@+id/timeedit_title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/noto_sans_cjk_kr_bold"
            android:textColor="@color/black"
            android:includeFontPadding="false"
            android:text="@string/dialog_alarm_title_txt"/>

        <TextView
            android:id="@+id/edit_info_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/timeedit_title_tv"
            app:layout_constraintStart_toStartOf="@+id/timeedit_title_tv"
            app:layout_constraintEnd_toEndOf="@+id/timeedit_title_tv"
            android:fontFamily="@font/noto_sans_cjk_kr_regular"
            android:includeFontPadding="false"
            android:textColor="@color/gray_45"
            android:text="@string/dialog_alarm_edit_info_txt"/>

        <TimePicker
            android:id="@+id/time_picker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"
            app:layout_constraintStart_toStartOf="@+id/timeedit_title_tv"
            app:layout_constraintEnd_toEndOf="@+id/timeedit_title_tv"
            app:layout_constraintTop_toBottomOf="@+id/edit_info_tv"/>

        <TextView
            android:id="@+id/close_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/time_picker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/confirm_btn"
            android:fontFamily="@font/noto_sans_cjk_kr_medium"
            android:includeFontPadding="false"
            android:textColor="@color/gray_45"
            android:text="@string/common_close"
            android:background="@drawable/dialog_left_round_bg"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:onClick="@{() -> viewmodel.onEditDialogCloseBtnClicked()}"/>

        <TextView
            android:id="@+id/confirm_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/time_picker"
            app:layout_constraintStart_toEndOf="@+id/close_btn"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/noto_sans_cjk_kr_medium"
            android:includeFontPadding="false"
            android:text="@string/common_confirm"
            android:foreground="?attr/selectableItemBackground"
            android:background="@drawable/dialog_right_round_bg"
            android:gravity="center"
            android:onClick="@{() -> viewmodel.onEditDialogConfirmBtnClicked()}"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>